--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,13 +13,13 @@
         </div>
         <nav>
             <ul>
-                <li><b><a class="article-link" routerLink="/character" id="charbutton">Characters</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules" id="locationbutton">Places</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules" id="diarybutton">Diary</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules" id="groupbutton">Groups</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules" id="bestiarybutton">Bestiary</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules" id="itembutton">Items</a></b></li>
-                <li><b><a class="article-link" routerLink="/rules">Map</a></b></li>
+                <li><b><a class="article-link" routerLink="/character">Characters</a></b></li>
+                <li><b><a class="article-link" routerLink="/location">Places</a></b></li>
+                <li><b><a class="article-link" routerLink="/diaryentry">Diary</a></b></li>
+                <li><b><a class="article-link" routerLink="/organization">Groups</a></b></li>
+                <li><b><a class="article-link" routerLink="/creature">Bestiary</a></b></li>
+                <li><b><a class="article-link" routerLink="/item">Items</a></b></li>
+                <li><b><a class="article-link" routerLink="/map">Map</a></b></li>
             </ul>
         </nav>
     </header>
