--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="main d-flex flex-column">
     <h1 class="text-center mb-5"> HTTP 404: Not Found </h1>
-    <img src="{{constants.wikiURL}}/static/wiki/images/404.png" alt="" class="center mb-3"/>
+    <img src="{{constants.wikiUrl}}/static/wiki/images/404.png" alt="" class="center mb-3"/>
 
     <p class="text-center"> We couldn't find the site you are looking for. <br> 
         But a dragon found you ! </p>
