--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -77,11 +77,13 @@
     justify-content: center;
     align-items: center;
     width: 5rem;
+    border-bottom: none;
 }
 
 #header .logo a:hover{
     text-decoration: none;
     color: gray;
+    border-bottom: none;
 }
 
 
@@ -379,3 +381,4 @@ body.is-preload #header .content .inner {
 .article-link{
     color: white;
 }
+
