--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -19,11 +19,6 @@
     color: #ffffff;
 }
 
-//.nav-link{
-//    display: flex;
-//    align-items: center;
-//    justify-content: center;
-//}
 
 .nav-link-text{
     font-weight: bold;
@@ -34,7 +29,16 @@
     background-color: #1f1e1f;
     border: none;
     width: 100%;
+    outline: none;
+    color: white;
 }
+
+// Remove "blue x" from chrome searchbar styling
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
 
 .searchbar{
     background-color: #1f1e1f;
@@ -43,6 +47,10 @@
     align-items: center;
     padding-left: 0.4rem;
     border-color: #717171;
+}
+
+form:focus-within{
+    box-shadow: 0 0 2pt 1pt white;    
 }
 
 
