Added image uploading and deletion

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -25,6 +25,7 @@
 
         <app-image-gallery
         [article_type]="this.articleType"
+        [article_pk]="this.character.pk"
         [images]="this.character.images"
         ></app-image-gallery>
 
