--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -48,9 +48,10 @@
                 <div *ngIf="activeModalState===constants.createState || activeModalState===constants.updateState">
                     <form [formGroup]="form" (ngSubmit)="cl(constants.createSignal)" enctype="multipart/form-data">
                         <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-                        <div class="form-group">
-                            <input type="file" (change)="onFileSelected($event)">
-                        </div>
+                        <!-- <div class="form-group">
+                            <label>Image</label>
+                            <input type="file" (change)="onFileSelected($event)" >
+                        </div> -->
                         <button type="submit" class="btn btn-outline-secondary">Submit</button>
                     </form>
                 </div>
