--- a/src/styles.scss
+++ b/src/styles.scss
@@ -249,3 +249,14 @@ h2{
 		max-width: 60rem;
 	}
 }
+// For Article Pages
+.delete-request{
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    border-radius: 4px;
+    background-color:rgba(27, 31, 34, 0.85);
+    padding: 0.5rem 1rem;
+    justify-content: flex-end;
+}
