--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -1,1 +1,34 @@
-<p>diaryentry-article works!</p>
+<div class="main">
+    <article *ngIf="diaryEntry; else loading">
+        <a routerLink="update">
+            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
+        </a>
+        <h1 class="text-center">
+            Diary Entry #
+            <a routerLink="../../../../session/{{diaryEntry.session_details.session_number}}/{{diaryEntry.session_details.is_main_session_int}}">
+                {{ diaryEntry.session_details.name }}
+            </a>
+        </h1>
+        <p class="text-center mb-5"> Written by: {{ diaryEntry.author_details.name }} </p>
+
+        <div class="mb-5">
+            <app-textfield 
+            [initialText]="diaryEntry.entry"
+            [heading]="diaryEntry.session_details.session_date | date"
+            (updateText)="onDescriptionUpdate($event)"
+            ></app-textfield>
+        </div>
+
+        <div class="float-right">
+            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
+            <div *ngIf="isArticleDeleteState" class="delete-request">
+                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
+                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(diaryEntry.pk)"> Yes </button>
+                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
+            </div>
+        </div>
+
+        <a routerLink="../../.." class="btn btn-outline-secondary">Back to Diaryentries</a>
+    </article>
+    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
+</div>
