--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -1,1 +1,46 @@
-<p>item-article works!</p>
+<div class="main">
+    <article *ngIf="item; else loading">
+        <!-- Heading -->
+        <a routerLink="update">
+            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
+        </a>
+        <h1 class="text-center"> {{ item.name }} </h1>
+        <p
+        *ngIf="item.owner_details" 
+        class="text-center mb-5"> 
+            Owned by: 
+            <a routerLink="/character/{{item.owner_details.name}}">{{ item.owner_details.name }}</a>
+        </p>
+
+        <!-- Image Gallery -->
+        <app-image-gallery
+        [article_type]="this.articleType"
+        [article_pk]="this.item.pk"
+        [images]="this.item.images"
+        ></app-image-gallery>
+
+        <!-- Description -->
+        <div class="mb-5">
+            <app-textfield 
+            [initialText]="item.description"
+            [heading]="'Description'"
+            (updateText)="onDescriptionUpdate($event)"
+            ></app-textfield>
+        </div>
+
+        <div class="float-right">
+            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
+            <div *ngIf="isArticleDeleteState" class="delete-request">
+                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
+                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(item.pk)"> Yes </button>
+                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
+            </div>
+        </div>
+
+        <a routerLink="/item" class="btn btn-outline-secondary mr-1">Back to Items</a>
+        <a 
+        *ngIf="item.owner_details"
+        routerLink="/character/{{item.owner_details.name}}" class="btn btn-outline-secondary">Back to {{item.owner_details.name}}</a>
+    </article>
+    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
+</div>
