--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,1 +1,69 @@
-<p>location-article works!</p>
+<div class="main">
+    <article *ngIf="location; else loading">
+        <!-- Heading -->
+        <a routerLink="update">
+            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
+        </a>
+        <h1 class="text-center"> {{ location.name }} </h1>
+        <!-- String indicating all parent_locations -->
+        <p
+        *ngIf="location.parent_location" 
+        class="text-center mb-5"> 
+        </p>
+
+        <!-- Image Gallery -->
+        <app-image-gallery
+        [article_type]="this.articleType"
+        [article_pk]="this.location.pk"
+        [images]="this.location.images"
+        ></app-image-gallery>
+
+        <!-- Description -->
+        <div class="mb-5">
+            <app-textfield 
+            [initialText]="location.description"
+            [heading]="'Description'"
+            (updateText)="onDescriptionUpdate($event)"
+            ></app-textfield>
+        </div>
+
+        <!-- Characters of Interest -->
+        <div class="mb-3">
+            <h5>Characters of Interest</h5>
+            <ul>
+                <li
+                *ngFor="let character of location.characters">
+                    <a routerLink="/character/{{character.name}}">
+                        {{character.name}}
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Locations of Interest -->
+        <h4>Locations of Interest <i class="fa fa-plus icon ml-1" (click)="addSublocation()"></i></h4>
+        <div class="encounter-list mb-5 mt-3">
+            <app-location-accordion [sublocations]="location.sublocations"></app-location-accordion>
+        </div>
+
+        <!-- Delete Button -->
+        <div class="float-right">
+            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
+            <div *ngIf="isArticleDeleteState" class="delete-request">
+                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
+                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(location.pk)"> Yes </button>
+                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
+            </div>
+        </div>
+
+        <!-- Return Buttons -->
+        <a routerLink="/location" class="btn btn-outline-secondary mr-1">Back to locations</a>
+        <a 
+        *ngIf="location.parent_location_details"
+        routerLink="/location/{{location.parent_location_details.parent_location}}/{{location.parent_location_details.name}}"
+        class="btn btn-outline-secondary">
+            Back to {{location.parent_location_details.name}}
+        </a>
+    </article>
+    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
+</div>
