--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -1,9 +1,12 @@
-<h4> {{ heading }} 
+<!-- Heading -->
+<h4 [innerHTML]="heading" class="d-inline"></h4>
+<h4 class="d-inline">
     <i *ngIf="!isEditState" (click)="enableEdit()" class="fa icon fa-pencil ml-2"></i>
     <i *ngIf="isEditState" (click)="cancelEdit()" class="fa icon fa-times ml-2"></i>
     <i *ngIf="isEditState" (click)="finishEdit()" class="fa icon fa-check ml-2"></i>
 </h4>
-<form>
+<!-- Text Body -->
+<form class="mt-2">
     <div class="textfield">
         <div *ngIf="isEditState">
             <editor 
@@ -14,11 +17,6 @@
             ></editor>
         </div>
 
-        <div 
-        *ngIf="!isEditState" 
-        innerHTML="{{ updatedText }}"
-        >
-            {{ updatedText }}
-        </div>
+        <div *ngIf="!isEditState" [innerHTML]="updatedText"></div>
     </div>
 </form>
